[Feat] 3차 스프린트 데이터 수집 기능 구현

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,13 @@ GEMINI_USE_SEARCH=true
 # Gemini 모델 버전 (기본값: 2.0)
 GEMINI_MODEL_VERSION=2.0
 
+# MySQL Database Configuration
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=your_mysql_password
+DB_NAME=livith_data
+DB_PORT=3306
+
 # 출력 디렉토리
 OUTPUT_DIR=output
 
